--- a/options.html
+++ b/options.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
   <head>
     <link rel="stylesheet" href="button.css">
@@ -7,7 +8,7 @@
     <div id="buttonDiv">
     </div>
     <div>
-      <p>Choose a different background color!</p>
+      <p>의견, 버그 제보 mauzerne@gmail.com </p>
     </div>
   </body>
   <script src="options.js"></script>
