--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 
 <script type="module" src="popup.js"></script>
-
+<meta charset="UTF-8">
 <div class="container">
-  <div>
-    <h1>hi</h1>
+  <div style = "width: 400px">
+    <h2>Twitch 방송에 입장하면 기능이 자동으로 활성화됩니다.</h2>
   </div>
 </div>
