popup 업데이트, storage 통해서 익스텐션 switch 상태 불러오기

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,17 @@
-
-<script type="module" src="popup.js"></script>
-<meta charset="UTF-8">
-<div class="container">
-  <div style = "width: 400px">
-    <h2>Twitch 방송에 입장하면 기능이 자동으로 활성화됩니다.</h2>
-  </div>
-</div>
+<html>
+  <head>
+    <script type="module" src="popup.js"></script>
+    <meta charset="UTF-8" />
+    <link type="text/css" href="switch.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Twitch Magic Chat ✨</h1>
+      <label for="toggle" class="toggleSwitch">
+        <span class="toggleButton"></span>
+      </label>
+    </div>
+    <div class="modal">변경사항을 적용하려면 새로고침이 필요합니다.</div>
+    <div class="contact">의견 및 버그제보 &nbsp; &nbsp; mauzerne@gmail.com</div>
+  </body>
+</html>
