필요없는 코드, 파일 삭제, 이름 수정

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
   <head>
     <script type="module" src="popup.js"></script>
     <meta charset="UTF-8" />
-    <link type="text/css" href="switch.css" rel="stylesheet" />
+    <link type="text/css" href="popup.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
