팝업에 Naver cafe marker 홍보문구 추가

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,10 @@
       </label>
     </div>
     <div class="modal">변경사항을 적용하려면 새로고침이 필요합니다.</div>
-    <div class="contact">의견 및 버그제보 &nbsp; &nbsp; mauzerne@gmail.com</div>
+    <div class="ad">
+      <div class="adTitle">☕팬카페 댓글을 쉽게 찾고싶다면?</div>
+      <div class="adContent">↳ Naver cafe Marker 확인하기</div>
+    </div>
+    <div class="contact">의견 및 버그제보 &nbsp; | &nbsp; mauzerne@gmail.com</div>
   </body>
 </html>
